--- a/src/app/components/time-unit/time-unit.component.scss
+++ b/src/app/components/time-unit/time-unit.component.scss
@@ -8,15 +8,16 @@
 
 app-holdable-button {
   position: absolute;
+  background-color: whitesmoke;
   width: 100%;
-  height: 1vw;
+  height: 1.5vmin;
   left: 0;
   &.up {
     bottom: 105%;
     .arrow {
       transform: rotate(-135deg);
       -webkit-transform: rotate(-135deg);
-      margin-bottom: -2px;
+      top: calc(50% - 0.56569vmin + 0.1vmin);
     }
   }
   &.down {
@@ -24,15 +25,18 @@ app-holdable-button {
     .arrow {
       transform: rotate(45deg);
       -webkit-transform: rotate(45deg);
-      margin-bottom: 2px;
+      top: calc(50% - 0.56569vmin - 0.1vmin);
     }
   }
 }
 
 .arrow {
   border: solid darkgrey;
-  border-width: 0 3px 3px 0;
+  border-width: 0 0.5vmin 0.5vmin 0;
   display: inline-block;
-  padding: 3px;
+  padding: 0.3vmin;
+  position: absolute;
+  left: calc(50% -  0.56569vmin);
+  margin: auto;
 }
 
